# CSVtoPlot

./: .gitignore  CSVtoPlot_ANALYZER_COMPLETE_GUIDE.md  LICENSE  README.md  TESTING_EXPORT.md  USAGE_GUIDE.md  create_test_excel_files.py  demo_export.py  demo_formula.py  demo_plots.py  diagnostic_export.py  pyproject.toml  requirements.txt  test_header_scanner.py  test_integration.py  test_plotting.py  test_statistics.py  test_two_way_anova.py
examples/: README.md  example_1_simple_import.py  example_2_selective_import.py  example_3_batch_import_to_database.py
src/neuromorpho_analyzer/: __init__.py  __main__.py  app.py  cli.py
src/neuromorpho_analyzer/core/database/: __init__.py  base.py  sqlite.py
src/neuromorpho_analyzer/core/exporters/: __init__.py  excel_exporter.py  export_config.py  graphpad_exporter.py  parameter_selector.py  statistics_table_exporter.py
src/neuromorpho_analyzer/core/importers/: __init__.py  csv_importer.py  excel_importer.py  file_scanner.py  json_importer.py  parameter_mapper.py  unified_importer.py
src/neuromorpho_analyzer/core/models/: __init__.py  assay.py  measurement.py
src/neuromorpho_analyzer/core/plotters/: __init__.py  bar_plotter.py  box_plotter.py  frequency_plotter.py  plot_config.py  plot_exporter.py  significance_annotator.py
src/neuromorpho_analyzer/gui/: __init__.py
test_data/: 001_Control_001.xlsx  002_GST_005L.csv  003_Treatment_010T.json  004_Control_002.xls
tests/: __init__.py  conftest.py  test_database.py  test_density_and_representative.py  test_export.py  test_file_scanner.py  test_importers.py  test_parameter_mapper.py  test_profiles.py
tests/test_data/: 1_Control_001.csv  1_Treatment_001.csv  1_Vehicle_001.csv
(+13 files in other folders)
