[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neuromorpho-analyzer"
version = "0.1.0"
description = "A tool for neuromorphological data analysis"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Jan Hawlicki", email = "jan.hawlicki@uni-jena.de"}
]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
keywords = ["neuromorphology", "data-analysis", "neuroscience", "morphology"]
dependencies = [
    "pandas>=1.5.0",
    "numpy>=1.21.0",
    "scipy>=1.9.0",
    "openpyxl>=3.0.0",
    "statsmodels>=0.13.0",
    "matplotlib>=3.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
neuromorpho-analyzer = "neuromorpho_analyzer.cli:main"

[project.urls]
Homepage = "https://github.com/Subiculum23/CSVtoPlot"
Repository = "https://github.com/Subiculum23/CSVtoPlot"
Issues = "https://github.com/Subiculum23/CSVtoPlot/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v"
